# cellector

./: CHANGELOG.md  README.md  pyproject.toml  testbook.ipynb
.github/workflows/: black.yml  test.yml
cellector/: feature_pipelines.py  features.py  filters.py  gui.py  io.py  manager.py  roi_processor.py  utils.py
cellector/gui/: _deprecated.py  gui.py  utils.py
cellector/gui2/: __init__.py  gui2.py  session.py  state.py  style.py  viewer.py
cellector/io/: __init__.py  base.py  constructing.py  operations.py
docs/: examples.md  gui.md  requirements.txt
notebooks/: tutorial.ipynb
redcell/: features.py  filters.py  gui.py  red_cell_processor.py  utils.py
tests/: test_gui.py
